# amazon-chime-voiceconnector-cdr-processing

./: .env  .eslintrc.json  .projenrc.js  README.md  cdk.json  deploy.mjs  package-lock.json  package.json  tsconfig.dev.json  tsconfig.json
.github/workflows/: build.yml
.projen/: deps.json  files.json  tasks.json
images/: CDRProcessing-Architecture-drawio.xml
resources/glue-scripts/: cdrDailyETL.py  cdrFullETL.py
resources/glue-setup/: runCrawlers.py
resources/step-function-lambdas/checkETL/: checkETL.py
resources/step-function-lambdas/checkProcessedCrawler/: checkProcessedCrawler.py
resources/step-function-lambdas/checkQuery/: checkQuery.py
resources/step-function-lambdas/checkRawCrawler/: checkRawCrawler.py
resources/step-function-lambdas/runETL/: runETL.py
resources/step-function-lambdas/runProcessedCrawler/: runProcessedCrawler.py
resources/step-function-lambdas/runQuery/: runQuery.py
resources/step-function-lambdas/runRawCrawler/: runRawCrawler.py
resources/step-function-lambdas/sendReport/: sendReport.py
resources/step-function-lambdas/sendResults/: sendResults.py
src/: amazon-chime-sdk-voice-connector-cdr-processor.ts  bucket-setup.ts  chime-voiceconnector-cdr-processing.ts  dailyETL.ts  envValidator.ts  fullETL.ts  glue-setup.ts  glue.ts  index.ts  kinesis.ts  lambda.ts  lambdas.ts  main.ts  monthlyReports.ts  s3.ts  sns.ts
src/resources/generateAthenaQuery/: index.py
src/resources/generateCdrs/: index.py  pyproject.toml  requirements.txt
test/: main.test.ts
test/__snapshots__/: main.test.ts.snap
(+2 files in other folders)
