[tool.poetry]
name = "generatecdrs"
version = "0.1.0"
description = ""
authors = ["Court Schuett <schuettc@amazon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
faker = "^18.4.0"
boto3 = "^1.26.109"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
